--- a/license-modification-template.html
+++ b/license-modification-template.html
@@ -57,6 +57,8 @@
           <th>is_media</th>
           <th>is_source</th>
           <th>is_script</th>
+          <th>keywordsline</th>
+          <th>no_licenses</th>
           <th>license_modification</th>
         </tr>
       </thead>
@@ -77,7 +79,9 @@
               <td>{{ row.is_media }}</td>
               <td>{{ row.is_source }}</td>
               <td>{{ row.is_script }}</td>
-              <td>{{ row.licence_modifications.modinfo }}</td>
+              <td>{{ row.keywordsline }}</td>
+              <td>{{ row.no_licenses }}</td>
+              <td style="color:red;">{{ row.licence_modifications.modinfo }}</td>
             </tr>
         {% endfor %}
       </tbody>
