--- a/license-modification-template.html
+++ b/license-modification-template.html
@@ -57,7 +57,7 @@
           <th>is_media</th>
           <th>is_source</th>
           <th>is_script</th>
-          <th>keywordsline</th>
+          <th>No of keywords</th>
           <th>no_licenses</th>
           <th>license_modification</th>
           <th>Licence Approval Status</th>
