--- a/license-modification-list.html
+++ b/license-modification-list.html
@@ -133,8 +133,8 @@
               <td>file</td>
               <td>build_proto.sh</td>
               <td>.sh</td>
-              <td>2020-04-30</td>
-              <td>711</td>
+              <td>2020-05-01</td>
+              <td>731</td>
               <td>Bourne-Again shell script, ASCII text executable</td>
               <td>Bash</td>
               <td>False</td>
@@ -143,7 +143,7 @@
               <td>False</td>
               <td>True</td>
               <td>True</td>
-              <td>1</td>
+              <td>3</td>
               <td>OrderedDict()</td>
               <td style="color:red;"></td>
               <td></td>
@@ -417,7 +417,7 @@
               <td>True</td>
               <td>False</td>
               <td>0</td>
-              <td>W3C Software Notice and License is Present</td>
+              <td>NCSA Open Source License is Present</td>
               <td style="color:red;"></td>
               <td></td>
             </tr>
