--- a/license-modification-list.html
+++ b/license-modification-list.html
@@ -141,7 +141,7 @@
               <td>True</td>
               <td style="color:red;"></td>
               <td style="color:red;">5</td>
-              <td style="color:red;">["line no 5 of file <_io.BufferedReader name='/src/roctracer/build_proto.sh'> has keyword - gibraltar\n", "line no 6 of file <_io.BufferedReader name='/src/roctracer/build_proto.sh'> has keyword - phantom\n", "line no 13 of file <_io.BufferedReader name='/src/roctracer/build_proto.sh'> has keyword - Gibraltar\n", "line no 24 of file <_io.BufferedReader name='/src/roctracer/build_proto.sh'> has keyword - phantom\n", "line no 36 of file <_io.BufferedReader name='/src/roctracer/build_proto.sh'> has keyword - gibraltar\n"]</td>
+              <td style="color:red;">['line no 5 has keyword/keywords - gibraltar\n', 'line no 6 has keyword/keywords - phantom\n', 'line no 13 has keyword/keywords - Gibraltar\n', 'line no 24 has keyword/keywords - phantom\n', 'line no 36 has keyword/keywords - gibraltar\n']</td>
             </tr>
         
             <tr>
@@ -221,7 +221,7 @@
               <td>True</td>
               <td style="color:red;"></td>
               <td style="color:red;">1</td>
-              <td style="color:red;">["line no 17 of file <_io.BufferedReader name='/src/roctracer/run_test.sh'> has keyword - phantom\n"]</td>
+              <td style="color:red;">['line no 17 has keyword/keywords - phantom\n']</td>
             </tr>
         
             <tr>
