--- a/license-modification-template.html
+++ b/license-modification-template.html
@@ -57,6 +57,7 @@
           <th>is_media</th>
           <th>is_source</th>
           <th>is_script</th>
+          <th>Is License present</th>
           <th>license_modification</th>
           <th>keywords Present</th>
           <th>Matched Lines</th>
@@ -79,10 +80,15 @@
               <td>{{ row.is_media }}</td>
               <td>{{ row.is_source }}</td>
               <td>{{ row.is_script }}</td>
+              {% if row.no_licenses %}
+              <td>{{ row.no_licenses }}</td>
+              {% else %}
+              <td style="color:red;">{{ 'No License Present'}}</td>
+              {% endif %}
               <td style="color:red;">{{ row.licence_modifications.modinfo }}</td>
               <td style="color:red;">{{ row.keywordsline }}</td>
               {% for match in row.matchedlines %}
-              <td style="color:red;">{{ row.match }}</td>
+              <td style="color:red;">{{ match }}</td>
               {% endfor %}
             </tr>
         {% endfor %}
